--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,8 @@
     "d3": "^7.9.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-router": "^7.2.0",
+    "react-router-dom": "^7.2.0",
     "recharts": "^2.15.0"
   },
   "devDependencies": {
